fixing scrolling on IOS

--- a/app/components/Footer/styles.css
+++ b/app/components/Footer/styles.css
@@ -86,10 +86,7 @@
 
         margin-bottom: 10px;
 
-        .icon {
-          width: 19.5px;
-          height: 18.42px;
-        }
+
 
         a {
           color: #f5f5f5;
